syntax = "proto3";

option csharp_namespace = "Client.Game.Proto";


service Game {
	rpc InitGame (InitGameRequest) returns (InitGameResponse);
	rpc SetCurrentPlayer (SetCurrentPlayerRequest) returns (SetCurrentPlayerResponse);
	rpc RemoteMove (MakeMoveRequest) returns (MakeMoveResponse);
}

message InitGameRequest{
	string id = 1;
	GameInfo gameInfo = 2;
}

message InitGameResponse{
}

message SetCurrentPlayerRequest{
	string id = 1;
}

message SetCurrentPlayerResponse{
}

message MakeMoveRequest{
	MoveInformation moveInfo = 1;
}

message MakeMoveResponse{
}

message NetworkPlayer {
	string ip = 1;
	int32 port = 2;
	string name = 3;
}

message GameInfo {
	int32 index = 1;
	repeated NetworkPlayer players = 2;
}


message AlcatrazFigure{
	int32 id = 1;
}

enum PlayerState{
	Unknown = 0;
	InLobby = 1;
	InGame = 2;
}

message MoveInformation {
	string id = 1;
	int32 player = 2;
	AlcatrazFigure prisoner = 3;
	int32 rowOrCol = 4;
	int32 row = 5;
	int32 col = 6;
}